fix: 去除 ModConfig UTF-8 BOM，MapPackager 兼容 JDK 17
Forge 1.20.1 使用 JDK 17，List.getFirst() 不可用；同时去掉部分 ModConfig 源文件的 BOM 以避免编译异常。

Co-authored-by: Cursor <cursoragent@cursor.com>